Bug 169964 - FILESAVE DOCX: OLE objects (in my case, formulas) disappear after collapsing the heading
Summary: FILESAVE DOCX: OLE objects (in my case, formulas) disappear after collapsing ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.3.2 release
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.1
Keywords: dataLoss, filter:docx
Depends on:
Blocks: DOCX-Formula Writer-Outline-Folding
  Show dependency treegraph
 
Reported: 2025-12-13 21:16 UTC by Bohdan
Modified: 2026-01-17 16:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example (2.37 MB, video/mp4)
2025-12-13 21:29 UTC, Bohdan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bohdan 2025-12-13 21:16:59 UTC
Description:
After closing the file, all OLE objects located under collapsed headers disappear.

Also, CONTENTS incorrectly displays page numbers if the headers are collapsed.

Steps to Reproduce:
1. Create a header in libreoffice writer.
2. Create an OLE object (in my case, a formula).
3. Fold the header.
4. Save and close the file.
5. When you open the saved file, the OLE object will disappear.

Actual Results:
Formulas disappear

Expected Results:
Save all OLE objects


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.3.2 (X86_64) / LibreOffice Community
Build ID: 580(Build:2)
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: gtk3
Locale: uk-UA (uk_UA.UTF-8); UI: uk-UA
25.8.3-3
Calc: threaded
Comment 1 Bohdan 2025-12-13 21:29:11 UTC
Created attachment 204623 [details]
Example
Comment 2 Dieter 2025-12-29 12:35:51 UTC
I confirm it with

Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 12; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded

and with

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 12; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Steps:
1. Make sure, that outline folding is active
2. Type a heading and a formula
3. Toggle Outline
4. Save as docx
5. Close and reopen

Expected result:
Formula visible

Actual result
Formula has been removed from the document

Additional information
Haven't tested with other OLE-Objects
Comment 3 Jim Raykowski 2026-01-04 02:44:12 UTC
Proposed patch:
https://gerrit.libreoffice.org/c/core/+/196516
Comment 4 Commit Notification 2026-01-14 22:56:11 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9cdb58822849805ca939e1079b01262e75a96bf2

tdf#169964 Fix folded OLE objects are not saved in docx

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-01-15 22:03:08 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/d6fe9aedf82c818a158056d6c0889ff2a8763c29

tdf#169964 Fix folded OLE objects are not saved in docx

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Dieter 2026-01-17 16:25:43 UTC
VERIFIED with

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 12; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Jim, thank you for fixing it!