tdf#169964 Fix folded OLE objects are not saved in docx

Examining DocxAttributeOutput::WriteFlyFrame case ww8::Frame::eOle,
it seems that OLE objects need to have their frames visible in
the document for them to be saved. This patch makes all folded
outline content visible during execution of the
DocxExportFilter:exportDocument function. SW_DLLPUBLIC's are added to
make linking succeed with clang.

Change-Id: I8fcaa98402ebd9a7a6135f65467a82bbca8731f9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196516
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit 9cdb58822849805ca939e1079b01262e75a96bf2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197316
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>